--- a/workshops/week-01/html-01/index.html
+++ b/workshops/week-01/html-01/index.html
@@ -3,29 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Better News</title>
   </head>
   <body>
     <header>
+      <h1>Better News</h1>
       <nav>
-        <h1>Better News</h1>
         <div>
           <a href="about.html" target="_blank">about</a>
         </div>
       </nav>
     </header>
     <main>
-      <section>
+      <section class="breaking-news sub-heading">
         <h2>Breaking News</h2>
         <img
           src="https://www.nordicnest.com/assets/blobs/byon-balloon-decoration-17-cm-dusty-red/40333-03-01-c43152de0f.jpg?preset=tiny&dpr=2"
           alt="image of a red ballon"
           width="200px"
         />
-        <p>Man trips over a balloon</p>
+        <p class="para">Man trips over a balloon</p>
       </section>
-      <section>
-        <p>Most read</p>
+      <section class="breaking-news">
+        <p class="para most-read-para">Most read</p>
         <ol>
           <li>Penguin ransacks fish stool at local market.</li>
           <li>The moon <em>is</em> actually made of cheese.</li>
