--- a/workshops/week-01/html-01/index.html
+++ b/workshops/week-01/html-01/index.html
@@ -77,9 +77,9 @@
         </div>
       </div>
       <section class="btn-container">
-        <button class="btn">do not press this button!</button>
+        <button id="btn" class="btn">do not press this button!</button>
       </section>
-      <section class="modal-container">
+      <section id="modal-container" class="modal-container">
         <div class="modal">
           <p>Oh dear, you pressed it didn't you</p>
           <p>blah blah blah</p>
