--- a/workshops/week-02/index.html
+++ b/workshops/week-02/index.html
@@ -4,14 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <script src="./app.js" defer type="module"></script>
     <title>Document</title>
   </head>
   <body>
+    <audio
+      id="audio"
+      src="./assets/audio/2378__andrew-duke__andrewduke0033.mp3"
+    ></audio>
     <header>
-      <h1></h1>
-      <nav></nav>
+      <h1>Reponsive Developer</h1>
     </header>
-    <main></main>
+    <main>
+      <h2 class="intro-text">Welcome to my website</h2>
+      <div class="container">
+        <section class="box">
+          <p>Image 1</p>
+          <img src="./assets/images/01.jpg" alt="cup cake" />
+        </section>
+        <section class="box">
+          <p>Image 2</p>
+          <img src="./assets/images/02.jpg" alt="cup cake 2" />
+        </section>
+        <section class="box">
+          <p>Image 3</p>
+          <img src="./assets/images/03.jpg" alt="cup cake 3" />
+        </section>
+      </div>
+    </main>
     <footer><p>This is a footer</p></footer>
   </body>
 </html>
